fixed alignment

--- a/src/styling/posters.page.details.module.scss
+++ b/src/styling/posters.page.details.module.scss
@@ -3,7 +3,7 @@
 	padding-top: 3%;
 	text-align: center;
 	font-family: Raleway, sans-serif;
-	width: 100%;
+	width: 90vw;
 	cursor: default;
 
 	> h2 {
